Add loading items to local database

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="profile_name">Vladyslav Deda</string>
+    <string name="device_sn">SN: %d</string>
 </resources>
