--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">My Devices</string>
+    <string name="toolbar_header">Test Application</string>
     <string name="delete">Delete</string>
     <string name="cancel">Cancel</string>
     <string name="delete_message">Are you sure you want to delete item SN: %d?</string>
