--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -2,6 +2,9 @@
 <resources>
     <string name="profile_name">Vladyslav Deda</string>
     <string name="device_sn">SN: %d</string>
+    <string name="device_mac_address">MAC Address: %s</string>
+    <string name="device_firmware">Firmware: %s</string>
+    <string name="device_model">Model: %s</string>
     <string name="empty_devices_list_message">Oops… it looks like the list of devices is empty, click the ‘Reset’ button to reload the list or check your internet connection</string>
     <string name="vera_plus">Vera Plus</string>
     <string name="vera_secure">Vera Secure</string>
